Fix alignment of dash links

--- a/app/assets/stylesheets/components/dashboard/dashboard.css
+++ b/app/assets/stylesheets/components/dashboard/dashboard.css
@@ -34,11 +34,11 @@
 }
 
 .dash-links :nth-child(7) {
-  padding-top: 15px;
+  padding-top: 18px;
 }
 
 .dash-links :nth-child(5) {
-  padding-top: 12.5px;
+  padding-top: 8px;
 }
 
 .dash-links :first-child {
@@ -86,7 +86,7 @@
   color: #fff;
   background-color: #6CC595;
   font-size: 24px;
-  padding: 5px 7px;
+  padding: 3px 7px;
   border-radius: 50%;
   margin: 0px;
 }
